@@ -1,0 +1,132 @@
+comment_char %
+escape_char  /
+%
+% Asturian Language Locale for Spain
+% Source:
+% Address:
+% Contact: Jordi Mallach
+% Email: jordi@gnu.org
+% Language: ast
+% Territory: ES
+% Revision: 1.0
+% Date: 2005-08-26
+% Application: general
+% Users: general
+%
+% This file is under the
+% GNU General Public License.
+% Based in the an_ES Locale
+
+LC_IDENTIFICATION
+title      "Asturian locale for Spain"
+source     ""
+address    ""
+contact    "Jordi Mallach"
+email      "jordi@gnu.org"
+tel        ""
+fax        ""
+language   "Asturian"
+territory  "Spain"
+revision   "1.0"
+date       "2005-08-26"
+%
+category  "ast_ES:2000";LC_IDENTIFICATION
+category  "ast_ES:2000";LC_CTYPE
+category  "ast_ES:2000";LC_COLLATE
+category  "ast_ES:2000";LC_TIME
+category  "ast_ES:2000";LC_NUMERIC
+category  "ast_ES:2000";LC_MONETARY
+category  "ast_ES:2000";LC_MESSAGES
+category  "ast_ES:2000";LC_PAPER
+category  "ast_ES:2000";LC_NAME
+category  "ast_ES:2000";LC_ADDRESS
+category  "ast_ES:2000";LC_TELEPHONE
+END LC_IDENTIFICATION
+
+LC_COLLATE
+copy "es_ES"
+END LC_COLLATE
+
+LC_CTYPE
+copy "es_ES"
+END LC_CTYPE
+
+LC_MESSAGES
+yesexpr "<U005E><U005B><U0073><U0053><U0079><U0059><U005D><U002E><U002A>"
+noexpr  "<U005E><U005B><U006E><U004E><U005D><U002E><U002A>"
+END LC_MESSAGES
+
+LC_MONETARY
+copy "es_ES"
+END LC_MONETARY
+
+LC_NUMERIC
+copy "es_ES"
+END LC_NUMERIC
+
+LC_TIME
+% Days of week in Asturian
+% llunes, martes, miércoles, xueves, vienres, sábadu, domingu
+% llu, mar, mié, xue, vie, sáb, dom
+abday   "<U0064><U006F><U006D>";"<U006C><U006C><U0075>";/
+        "<U006D><U0061><U0072>";"<U006D><U0069><U00E9>";/
+        "<U0078><U0075><U0065>";"<U0076><U0069><U0065>";/
+        "<U0073><U00E1><U0062>"
+day     "<U0064><U006F><U006D><U0069><U006E><U0067><U0075>";/
+        "<U006C><U006C><U0075><U006E><U0065><U0073>";/
+        "<U006D><U0061><U0072><U0074><U0065><U0073>";/
+        "<U006D><U0069><U00E9><U0072><U0063><U006F><U006C><U0065><U0073>";/
+        "<U0078><U0075><U0065><U0076><U0065><U0073>";/
+        "<U0076><U0069><U0065><U006E><U0072><U0065><U0073>";/
+        "<U0073><U00E1><U0062><U0061><U0064><U0075>"
+% Month names in Asturian
+% xineru, febreru, marzu, abril, mayu, xunu, xunetu, agostu, setiembre,
+% ochobre, payares, avientu
+% Abbreviated form of xunetu is "xnt"
+abmon   "<U0078><U0069><U006E>";"<U0066><U0065><U0062>";/
+        "<U006D><U0061><U0072>";"<U0061><U0062><U0072>";/
+        "<U006D><U0061><U0079>";"<U0078><U0075><U006E>";/
+        "<U0078><U006E><U0074>";"<U0061><U0067><U006F>";/
+        "<U0073><U0065><U0074>";"<U006F><U0063><U0068>";/
+        "<U0070><U0061><U0079>";"<U0061><U0076><U0069>"
+mon     "<U0078><U0069><U006E><U0065><U0072><U0075>";/
+        "<U0066><U0065><U0062><U0072><U0065><U0072><U0075>";/
+        "<U006D><U0061><U0072><U007A><U0075>";/
+        "<U0061><U0062><U0072><U0069><U006C>";/
+        "<U006D><U0061><U0079><U0075>";/
+        "<U0078><U0075><U006E><U0075>";/
+        "<U0078><U0075><U006E><U0065><U0074><U0075>";/
+        "<U0061><U0067><U006F><U0073><U0074><U0075>";/
+        "<U0073><U0065><U0074><U0069><U0065><U006D><U0062><U0072><U0065>";/
+        "<U006F><U0063><U0068><U006F><U0062><U0072><U0065>";/
+        "<U0070><U0061><U0079><U0061><U0072><U0065><U0073>";/
+        "<U0061><U0076><U0069><U0065><U006E><U0074><U0075>"
+d_t_fmt "<U0025><U0061><U0020><U0025><U0064><U0020><U0025><U0062><U0020><U0025><U0059><U0020><U0025><U0054><U0020><U0025><U005A>"
+d_fmt   "<U0025><U0064><U002F><U0025><U006D><U002F><U0025><U0079>"
+t_fmt   "<U0025><U0054>"
+am_pm   "";""
+t_fmt_ampm ""
+date_fmt       "<U0025><U0061><U0020><U0025><U0062><U0020><U0025><U0065>/
+<U0020><U0025><U0048><U003A><U0025><U004D><U003A><U0025><U0053><U0020>/
+<U0025><U005A><U0020><U0025><U0059>"
+END LC_TIME
+
+LC_PAPER
+copy "es_ES"
+END LC_PAPER
+
+LC_TELEPHONE
+copy "es_ES"
+END LC_TELEPHONE
+
+LC_MEASUREMENT
+copy "es_ES"
+END LC_MEASUREMENT
+
+LC_NAME
+copy "es_ES"
+END LC_NAME
+
+LC_ADDRESS
+copy "es_ES"
+END LC_ADDRESS
